--- a/hackathon-ai+sus.html
+++ b/hackathon-ai+sus.html
@@ -52,6 +52,11 @@ th {
   background-color: #90EE90;
 }
 
+thblue {
+  padding: 8px;
+  background-color: #90EE90;
+}
+
 tr:nth-child(even) {
   background-color: #dddddd;
 }
@@ -116,12 +121,14 @@ tr:nth-child(even) {
 			<br>			<br>			<br>
 			
 <p>This hackathon in “AI for Sustainability” aims to bring together students and researchers from a multitude of disciplines to collaborate on a small set of strategically selected projects at the intersection of environmental science and artificial intelligence (AI).</p> 
-<p>The goal is to collaborate in multi- and interdisciplinary teams to provide research-driven and practical solutions to topics in sustainability. Breakfast, lunch, tea/coffee and water are provided (free) to participants throughout the hackathon. </p>			
-
+<p>The goal is to collaborate in multi- and interdisciplinary teams to provide research-driven and practical solutions to topics in sustainability. Breakfast, lunch, tea/coffee and water are provided (free) to participants throughout the hackathon.</p>			
+<p>We welcome participants from multiple different disciplines to contribute to different aspects of the projects.</p>			
+<p>28 March - 1 April 2022</p>
 <p><i class="fa fa-star" style="color:Gold;"></i>
 Register using the online form <a href="https://forms.gle/E5FsxaiCkMRhvd6j8">here</a>
 <i class="fa fa-star" style="color:Gold;"></i>
 </p>
+<p>Registration closes 18 March.</p>
 		
 				</div></div></div>
 				
@@ -195,63 +202,147 @@ Register using the online form <a href="https://forms.gle/E5FsxaiCkMRhvd6j8">her
 					<h2 class="title">Programme</h2>
 				</div>
 				<!-- /Section header -->
+<p>Our programme is as follows - as the event is run during the teaching period, it is expected that not all
+participants will be able to attend all sessions. You can always join us and contribute to those sessions that 
+you are available for.<p>				
 				
 <table>
   <tr>
-    <th>MONDAY</th> 
+    <th>MONDAY 28 March</th> 
     <th></th>      
+    <th>Location</th>          
       </tr>
         <tr>
     <td>09:00 - 10:00:</td>
     <td>Arrival and Breakfast</td>
+    <td>RBB 3rd floor, social area</td>    
   </tr>
   <tr>
     <td>10:00 - 12:00:</td>
-    <td>Session 1: Deep learning</td>
+    <td>Session 1: Deep learning: simple neural nets and backprop</td>
+    <td>RBB 3rd floor, LTD</td>        
   </tr>
   <tr>
     <td>12:00 - 13:00:</td>
     <td>Lunch and group introductions</td>
+    <td>RBB 3rd floor, social area</td>        
   </tr>
   <tr>
     <td>13:00 - 14:00:</td>
     <td>Session 2: Introduction of projects, Q&A</td>
+    <td>RBB 3rd floor, LTD</td>            
   </tr>
   <tr>
     <td>14:00 - 16:00:</td>
-    <td>Lab session, getting started.</td>
+    <td>Lab session, getting started: Tensorflow and Keras</td>
+    <td>Turing lab (RBB 335)</td>            
   </tr>
   <tr>
-    <th>TUESDAY, WEDNESDAY, THURSDAY</th> 
+    <th>TUESDAY 29 March</th> 
     <th></th>      
+    <th>Location</th>          
       </tr>
         <tr>  
-    <td>09:00 - 10:00:</td>
+    <td>09:00 - 09:30:</td>
     <td>Arrival and Breakfast</td>
+    <td>RBB 3rd floor, social area</td>        
   </tr>
+        <tr>  
+    <td>09:30 - 10:30:</td>
+    <td>Plenary -- Intro to Image Analysis: Convolutional Neural Networks vs Transformers</td>
+    <td>RBB 3rd floor, LTD</td>            
+  </tr>  
   <tr>
-    <td>10:00 - 12:00:</td>
-    <td>Development in groups</td>
+    <td>10:30 - 12:00:</td>
+    <td>Development in groups (CNNs)</td>
+    <td>Cray lab (RBB 321)</td>                
   </tr>
   <tr>
     <td>12:00 - 13:00:</td>
     <td>Lunch and discussion</td>
+    <td>RBB 3rd floor, social area</td>        
   </tr>
   <tr>
-    <td>13:00 - 14:00:</td>
-    <td>Development in groups</td>
+    <td>13:00 - 15:00:</td>
+    <td>Development in groups (Transformers)</td>
+    <td>Turing lab (RBB 335)</td>                
   </tr> 
   <tr>
-    <th>FRIDAY</th> 
+  <tr>
+    <th>WEDNESDAY 30 March</th> 
     <th></th>      
+        <th>Location</th>      
+      </tr>
+        <tr>  
+    <td>09:00 - 09:30:</td>
+    <td>Arrival and Breakfast</td>
+    <td>RBB 3rd floor, social area</td>        
+  </tr>
+    <tr>  
+    <td>09:30 - 10:30:</td>
+    <td>Plenary -- Intro to Time-series modelling: Recurrent Neural Networks vs Transformers</td>
+    <td>RBB 3rd floor, LTD</td>            
+  </tr>    
+  <tr>
+    <td>10:30 - 12:00:</td>
+    <td>Development in groups (LSTMs and GRUs)</td>
+    <td>Cray lab (RBB 321)</td>                
+  </tr>
+  <tr>
+    <td>12:00 - 13:00:</td>
+    <td>Lunch and discussion</td>
+    <td>RBB 3rd floor, social area</td>        
+  </tr>
+  <tr>
+    <td>13:00 - 15:00:</td>
+    <td>Development in groups (Transformers)</td>
+    <td>Cray lab (RBB 321)</td>                
+  </tr> 
+  <tr>
+  <tr>
+    <th>THURSDAY 31 March</th> 
+    <th></th>      
+    <th>Location</th>          
+      </tr>
+        <tr>  
+    <td>09:00 - 09:30:</td>
+    <td>Arrival and Breakfast</td>
+    <td>RBB 3rd floor, social area</td>        
+  </tr>
+    <tr>  
+    <td>09:30 - 10:30:</td>
+    <td>Plenary -- Intro to Git and code documentation. Metrics and Benchmarking.</td>
+    <td>RBB 3rd floor, LTD</td>            
+  </tr>     
+  <tr>
+    <td>10:30 - 12:00:</td>
+    <td>Development in groups</td>
+    <td>Turing lab (RBB 335)</td>                
+  </tr>
+  <tr>
+    <td>12:00 - 13:00:</td>
+    <td>Lunch and discussion</td>
+    <td>RBB 3rd floor, social area</td>        
+  </tr>
+  <tr>
+    <td>13:00 - 15:00:</td>
+    <td>Development in groups</td>
+    <td>Turing lab (RBB 335)</td>                
+  </tr> 
+  <tr>    
+    <th>FRIDAY 1 April</th> 
+    <th></th>      
+    <th>Location</th>          
       </tr>
         <tr>  
     <td>09:00 - 10:00:</td>
     <td>Arrival and Breakfast</td>
+    <td>RBB 3rd floor, social area</td>        
   </tr>
   <tr>
     <td>10:00 - 12:00:</td>
-    <td>Group presentations of results, discussion.</td>
+    <td>Plenary: Group presentations of results, discussion.</td>
+    <td>RBB 3rd floor, LTD</td>            
   </tr>
 </table>
 
