--- a/hackathon-ai+sus.html
+++ b/hackathon-ai+sus.html
@@ -274,19 +274,19 @@ you are available for.<p>
         <th>Location</th>      
       </tr>
         <tr>  
-    <td>09:00 - 09:30:</td>
+    <td>09:00 - 10:00:</td>
     <td>Arrival and Breakfast</td>
     <td>RBB 3rd floor, social area</td>        
   </tr>
     <tr>  
-    <td>09:30 - 10:30:</td>
-    <td>Plenary -- Intro to Time-series modelling: Recurrent Neural Networks vs Transformers</td>
-    <td>RBB 3rd floor, LTD</td>            
+    <td>10:00 - 11:00:</td>
+    <td>Development in Groups</td>
+    <td>Hopper Lab, RBB 207</td>            
   </tr>    
   <tr>
-    <td>10:30 - 12:00:</td>
-    <td>Development in groups (LSTMs and GRUs)</td>
-    <td>Cray lab (RBB 321)</td>                
+    <td>11:00 - 12:00:</td>
+    <td>Taught component: Transformer networks</td>
+    <td>RBB LTD</td>                
   </tr>
   <tr>
     <td>12:00 - 13:00:</td>
@@ -296,7 +296,7 @@ you are available for.<p>
   <tr>
     <td>13:00 - 15:00:</td>
     <td>Development in groups (Transformers)</td>
-    <td>Cray lab (RBB 321)</td>                
+    <td>Hopper Lab, RBB 207</td>                
   </tr> 
   <tr>
   <tr>
