--- a/hackathon-ai+sus.html
+++ b/hackathon-ai+sus.html
@@ -95,6 +95,7 @@ tr:nth-child(even) {
 					<li><a href="#projects">Projects</a>					
 					<li><a href="#programme">Programme</a>										
 					<li><a href="#organisation">Organisation</a></li>
+					<li><a href="#thanks">Thanks</a></li>					
 					<li></li>					
 				</ul>
 				<!-- /Main navigation -->				
@@ -125,10 +126,9 @@ tr:nth-child(even) {
 <p>We welcome participants from multiple different disciplines to contribute to different aspects of the projects.</p>			
 <p>28 March - 1 April 2022</p>
 <p><i class="fa fa-star" style="color:Gold;"></i>
-Register using the online form <a href="https://forms.gle/E5FsxaiCkMRhvd6j8">here</a>
+Registration is now closed.</a>
 <i class="fa fa-star" style="color:Gold;"></i>
 </p>
-<p>Registration closes 18 March.</p>
 		
 				</div></div></div>
 				
@@ -379,7 +379,42 @@ you are available for.<p>
 	</div>
 	<!-- /About -->		
 	
-	
+		<!-- About -->
+	<div id="thanks" class="section md-padding">
+
+		<!-- Container -->
+		<div class="container">
+
+			<!-- Row -->
+			<div class="row">
+
+				<!-- Section header -->
+				<div class="section-header text-center">
+					<h2 class="title">Thanks!</h2>
+				</div>
+				<!-- /Section header -->
+				
+		<div >	
+					<img class="img-responsive" src="./img/hackathon-banner.jpeg" alt="" width="3000" align="left">
+				</div></div>	
+</br> Thanks everyone for attending! We've had a fantastic week with over 30 active participants over the days and some really interesting outcomes. </br></br>
+We've managed to identify and highlight hedges from space, laying the foundation to further research into the biodiversity of hedges
+and the wildlife that they support. We have also managed discover a new suite of deep learning algorithms to predict fatigue in monopile structures and
+inform their remaining useful life. We have create a spatially-aware flood warning system based on social media tweets and images.</br></br>
+Thanks to our fantastic group leads for sharing their data and expertise and supporting the groups in achieving these outcomes. Thanks to all our 
+participants for turning up, and giving some of their own time to feed into our research projects and making the hackathon a success! </br></br>
+Thanks to NERC Discipline Hopping and the Energy and Environment Institute for funding us!
+			</div>
+			<!-- /Row -->				
+
+
+
+		</div>
+		<!-- /Container -->
+
+	</div>
+	<!-- /About -->		
+
 	
 	<!-- Footer -->
 	<footer id="footer" class="sm-padding bg-dark">
