--- a/publications.html
+++ b/publications.html
@@ -151,7 +151,8 @@
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>															
 								<li>
-								<a href="publications/nldl2022od.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
+								<a href="https://septentrio.uit.no/index.php/nldl/article/view/6229/6503"><i class="fa fa-cloud-download"></i></a>Link</li>								
+								<a href="publications/Modelling+Phytoplankton+Behaviour+in+the+North+and+Irish+Sea+with+Transformer+Networks.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
 							</ul>
 
 							<ul class="blog-meta">
