--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@ Deep learning, computer vision
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/iclr.jpeg" alt="">
+							<img class="img-responsive"  src="./img/iclr2.jpeg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
