--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			
 <i style="font-size:25pt; align:center;">Welcome! </i><p> We are the Big Data Analytics research group (BDA) in the <a href="https://www.hull.ac.uk/faculties/departments/research/department-of-computer-science-and-technology#content">Department of Computer Science</a> at the University of Hull.
 		 
-We are part of the larger research group on <a href="https://www.hull.ac.uk/work-with-us/research/groups/dependable-intelligent-systems">Dependable Intelligent Systems (DEIS)</a>.
+We collaborate with the <a href="https://www.hull.ac.uk/work-with-us/research/groups/dependable-intelligent-systems">Dependable Intelligent Systems (DEIS) research group</a>.
 
 We do cutting-edge research in (deep) machine learning, artificial intelligence and natural language 
 processing and work with local and international 
