--- a/index.html
+++ b/index.html
@@ -675,6 +675,28 @@ Erv is currently researching efficient ways to model sequencies and time series.
 </ul>	
 <br>
 
+<h6>Samuel Rose</h6>, PhD student 
+&nbsp;&nbsp;
+<a href="mailto:s.p.rose-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.linkedin.com/in/samuel-rose-spr/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Deep learning, natural language processing
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+Sam works on the automatic processing and analysis of text to identify indicators of dyslexia.
+</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+
+
 <h6>Victoria Sherratt</h6>, PhD student 
 &nbsp;&nbsp;
 <a href="mailto:V.SHERRATT-2020@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
