--- a/hackathon-ai+sus.html
+++ b/hackathon-ai+sus.html
@@ -366,7 +366,7 @@ you are available for.<p>
 				</div>
 				<!-- /Section header -->
 				
-<p>Nina Dethlefs, Neil Gordon, Lydia Bryan-Smith - <a href="https://www.hull.ac.uk/faculties/departments/research/department-of-computer-science-and-technology">Computer Science</a></p>
+<p>Nina Dethlefs, Neil Gordon, Lydia Bryan-Smith, Onatkut Dagtekin - <a href="https://www.hull.ac.uk/faculties/departments/research/department-of-computer-science-and-technology">Computer Science</a></p>
 <p>Agota Mockute, Robert Houseago, Josh Wolstenholme, Rob Thomas - <a href="https://www.hull.ac.uk/work-with-us/research/institutes/energy-and-environment-institute">Energy and Environment Institute</a></p>
 			
 
