--- a/deep_learning.html
+++ b/deep_learning.html
@@ -99,6 +99,52 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>RELATE: Generating a linguistically inspired Knowledge Graph for fine-grained emotion classification.</h3>
+							<ul class="blog-meta">
+								<li>Schoene, A., 
+									<a href="index.html#team">Dethlefs, N.</a>, Ananiadou, Sophia.
+								</li>
+								<li>
+								<a href="publications/lrec22_draft.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Several existing resources are available for sentiment analysis (SA) tasks that are used for learning sentiment specific
+embedding (SSE) representations. These resources are either large, common-sense knowledge graphs (KG) that cover a limited
+amount of polarities/emotions or they are smaller in size, such as lexicons, which require costly human annotation and cover
+fine-grained emotions. Therefore using knowledge resources to learn SSE representations is either limited by the low coverage
+of polarities/emotions or the overall size of a resource. In this paper, we first introduce a new directed KG called ‘RELATE’,
+which is built to overcome both the issue of low coverage of emotions and the issue of scalability. RELATE is the first KG of
+its size to cover Ekman’s six basic emotions that are directed towards entities. It is based on linguistic rules to incorporate the
+benefit of semantics without relying on costly human annotation. The performance of ‘RELATE’ is evaluated by learning SSE
+representations using a Graph Convolutional Neural Network (GCN).
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 13th Language Resources and Evaluation Conference (LREC).</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Towards Contextually Sensitive Analysis of Memes: Meme Genealogy and Knowledge Base.</h3>
 							<ul class="blog-meta">
 								<li>
