--- a/index.html
+++ b/index.html
@@ -701,6 +701,25 @@ Sam works on the automatic processing and analysis of text to identify indicator
 </ul>	
 <br>
 
+<h6>Callum Rothon</h6>, PhD student 
+&nbsp;&nbsp;
+<a href="mailto:C.ROTHON-2017@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<br> (Deep) Computer Vision, Structural health monitoring, offshore wind
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+Callum is part of the Aura CDT in Offshore Wind Energy and the Environment and originally a mechanical engineer by degree. His PhD focuses on structural health monitoring of wind
+turbines with a specific focus on damage detection from images. 
+</p>
+</details>
+</abstract>
+</ul>	
+<br>
 
 
 <h6>Victoria Sherratt</h6>, PhD student 
@@ -849,7 +868,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i><a href="index.html#team">Joyjit</a></li>
+								<li><i class="fa fa-user"></i><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a></li>
 								<li><i class="fa fa-clock-o"></i>May 2022</li>
 							</ul>
 							<h3>Forbes 30 Under 30</h3>
@@ -900,7 +919,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li> <a href="index.html#team">Nina</a></li>
+								<li> <a href="https://scholar.google.co.uk/citations?view_op=list_works&hl=en&hl=en&user=dv1RKmIAAAAJ&sortby=pubdate">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>April 2022</li>
 							</ul>
 							<h3>Inspired in Hull Awards 2022</h3>
@@ -922,7 +941,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i><a href="index.html#team">Joyjit</a>, <a href="index.html#team">Nina</a></li>
+								<li><i class="fa fa-user"></i><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a>, <a href="https://scholar.google.co.uk/citations?view_op=list_works&hl=en&hl=en&user=dv1RKmIAAAAJ&sortby=pubdate">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>April 2022</li>
 							</ul>
 							<h3>ICRL Social on Facilitating the Renewables Transition with AI</h3>
@@ -944,7 +963,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i><a href="index.html#team">Joyjit</a>, <a href="index.html#team">Nina</a></li>
+								<li><i class="fa fa-user"></i><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a>, <a href="https://scholar.google.co.uk/citations?view_op=list_works&hl=en&hl=en&user=dv1RKmIAAAAJ&sortby=pubdate">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>13 April 2022</li>
 							</ul>
 							<h3>Conversation article</h3>
@@ -1000,7 +1019,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><i class="fa fa-user"></i><a href="https://www.hull.ac.uk/staff-directory/robert-houseago">Bobby</a></li>
+								<li><i class="fa fa-user"></i><a href="https://scholar.google.co.uk/citations?user=nSFstQcAAAAJ&hl=en">Bobby</a></li>
 								<li><i class="fa fa-clock-o"></i>Jan 2022</li>
 							</ul>
 							<h3> Sugergen best poster award!</h3>
