--- a/sustainability.html
+++ b/sustainability.html
@@ -98,6 +98,51 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Facilitating a smoother transition to renewable energy with AI.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Chatterjee, J.</a>
+								</li>
+		<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<a href="publications/patterns2022.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>
+								<li>
+								<a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00125-8"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Artificial intelligence (AI) can help facilitate wider adoption of renewable energy globally. We organized a social event for the AI and renewables community to discuss these aspects at the International Conference on Learning Representations (ICLR), a leading AI conference. This opinion reflects on the key messages and provides a call for action on leveraging AI for transition toward net zero.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 Patters Opinion Vol 3, Issue 6.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->											
+										
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3> Imputation of Partially Observed Water Quality Data Using Self-Attention LSTM.</h3>
 							<ul class="blog-meta">
 								<li>
@@ -225,6 +270,7 @@ Offshore wind turbine monopiles require structural health monitoring throughout 
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>															
 								<li>
+								<a href="https://septentrio.uit.no/index.php/nldl/article/view/6229/6503"><i class="fa fa-link"></i></a>Link</li>																
 								<a href="publications/nldl2022od.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
 							</ul>
 
