--- a/publications.html
+++ b/publications.html
@@ -101,14 +101,61 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
-							<h3>RELATE: Generating a linguistically inspired Knowledge Graph for fine-grained emotion classification.</h3>
+							<h3>Facilitating a smoother transition to renewable energy with AI.</h3>
 							<ul class="blog-meta">
-								<li>Schoene, A., 
-									<a href="index.html#team">Dethlefs, N.</a>, Ananiadou, Sophia.
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Chatterjee, J.</a>
 								</li>
+		<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li>
+								<li>
+								<a href="publications/patterns2022.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>
+								<li>
+								<a href="https://www.cell.com/patterns/fulltext/S2666-3899(22)00125-8"><i class="fa fa-link"></i></a>Link</li>	
+							</ul>
+
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Artificial intelligence (AI) can help facilitate wider adoption of renewable energy globally. We organized a social event for the AI and renewables community to discuss these aspects at the International Conference on Learning Representations (ICLR), a leading AI conference. This opinion reflects on the key messages and provides a call for action on leveraging AI for transition toward net zero.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2022 Patters Opinion Vol 3, Issue 6.</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>										
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+						
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>RELATE: Generating a linguistically inspired Knowledge Graph for fine-grained emotion classification.</h3>							
+							<ul class="blog-meta">
+	<li>Schoene, A., 
+									<a href="index.html#team">Dethlefs, N.</a>, Ananiadou, Sophia.
+								</li>							
 								<li>
 								<a href="publications/lrec22_draft.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
 							</ul>
+
 
 							<ul class="blog-meta">
 								<abstract style="display:inline" ;>
@@ -284,7 +331,8 @@ Offshore wind turbine monopiles require structural health monitoring throughout 
 										<summary>
 											<span style="color:#6195FF">Hide/Show Full Abstract</span>
 										</summary>
- Accurate and efficient assessment of offshore wind turbine monopile fatigue is required to inform maintenance and decommissioning decision making. Although, direct field-based measurements are limited and current industry standard modelling approaches are often devoid of fully non-linear waves, thus omitting critically important resonance effects. Here, numerical modelling is combined with machine learning to develop a meta-model capable of rapidly estimating monopile damage and fatigue. Fully non-linear wave kinematics were numerically modelled using higher-order boundary element methods to represent conditions recorded in the North Sea. These environmental simulations were implemented within numerical areo-hydro-servo-elastic engineering modelling of a reference turbine (NREL 5MW) with monopile foundations, for both operational and parked turbine configurations across a range of incoming wind conditions. The modelled fore-aft tower base bending moments are used to estimate of the corresponding structural damage using rainflow-counting methods, enabling identification of conditions associated with the largest damage loads. These data are applied within the development a meta-model based on convolutional neural networks to provide rapid assessment of monopile damage associated with any given environmental and operational condition.
+ Accurate and efficient assessment of offshore wind turbine monopile fatigue is required to inform maintenance and decommissioning decision making. Although, direct field-based measurements are limited and current industry standard f
+  approaches are often devoid of fully non-linear waves, thus omitting critically important resonance effects. Here, numerical modelling is combined with machine learning to develop a meta-model capable of rapidly estimating monopile damage and fatigue. Fully non-linear wave kinematics were numerically modelled using higher-order boundary element methods to represent conditions recorded in the North Sea. These environmental simulations were implemented within numerical areo-hydro-servo-elastic engineering modelling of a reference turbine (NREL 5MW) with monopile foundations, for both operational and parked turbine configurations across a range of incoming wind conditions. The modelled fore-aft tower base bending moments are used to estimate of the corresponding structural damage using rainflow-counting methods, enabling identification of conditions associated with the largest damage loads. These data are applied within the development a meta-model based on convolutional neural networks to provide rapid assessment of monopile damage associated with any given environmental and operational condition.
 									</details>
 								</abstract>
 							</ul>
@@ -317,7 +365,7 @@ Offshore wind turbine monopiles require structural health monitoring throughout 
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li>															
 								<li>
-								<a href="https://septentrio.uit.no/index.php/nldl/article/view/6229/6503"><i class="fa fa-cloud-download"></i></a>Link</li>								
+								<a href="https://septentrio.uit.no/index.php/nldl/article/view/6229/6503"><i class="fa fa-link"></i></a>Link</li>								
 								<a href="publications/Modelling+Phytoplankton+Behaviour+in+the+North+and+Irish+Sea+with+Transformer+Networks.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>	 
 							</ul>
 
