--- a/publications.html
+++ b/publications.html
@@ -128,7 +128,7 @@ Artificial intelligence (AI) can help facilitate wider adoption of renewable ene
 								</abstract>
 							</ul>
 							<ul class="blog-meta">
-								<li>2022 Patters Opinion Vol 3, Issue 6.</li>
+								<li>2022 Patterns Opinion Vol 3, Issue 6.</li>
 							</ul>
 							<!-- blog tags -->
 							<div class="blog-tags">
