--- a/index.html
+++ b/index.html
@@ -857,7 +857,31 @@ Deep learning, computer vision
 				<!-- /Section header -->
 
 				<div class="row">
-				<!-- blog -->				
+				<!-- blog -->			
+				
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/ieeespectrum.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a>, <a href="https://scholar.google.co.uk/citations?view_op=list_works&hl=en&hl=en&user=dv1RKmIAAAAJ&sortby=pubdate">Nina</a></li>
+								<li><i class="fa fa-clock-o"></i>June, July 2022</li>
+							</ul>
+							<h3>Disseminating our Wind Research</h3>
+						<p>Joyjit was interviewed by IEEE Spectrum on 
+						<a href="https://spectrum.ieee.org/climate-change-ai">AI's impact on wind and solar energy</a>, stressing the 
+						urgency of more uptake, and the 
+						potential of natural language as a way to enhance explainability. Nina presented our research on wind and language to Toshiba Europe's
+						<a href="https://www.toshiba.eu/pages/eu/Cambridge-Research-Laboratory/dialogue-systems">Dialogue Systems</a> group.	
+						It was lovely to chat with everyone there.
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->						
 
 				
 				<!-- blog -->
