--- a/publications.html
+++ b/publications.html
@@ -98,6 +98,8 @@
 <p>Complete list of our group and member's publications. Click tags to sort by topic.</p>
 
 
+						<!-- publication entry -->	
+
 					<!-- publication entry -->
 
 						<div class="blog-content">
