--- a/index.html
+++ b/index.html
@@ -501,61 +501,6 @@ Causal Inference and Time-Series Analysis.</p>
 </ul>	
 <br>
 
-<h6>Dr Bikash Gyawali</h6>, KTP Associate
-&nbsp;&nbsp;
-<a href="mailto:b.gyawali@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://scholar.google.com/citations?user=k78ZknsAAAAJ&hl=en"><i class="fa fa-google"></i></a>
-<a href="https://www.linkedin.com/in/bikash-gyawali-1b26476a/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
-<br> Artificial intelligence, data analysis, natural language processing
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-<p><img class="img-responsive" src="./img/bikash.jpeg" alt="" width="150" align="right">	
-I am a researcher working in Natural Language Processing and Big Data Systems. Over the last five years, I have worked as 
-a full time researcher on several topics related to Natural Language Understanding and Generation, Deep Learning, Big Data 
-Analysis and Text Mining of scientific documents. </p>
-
-<p> Bikash is currently an KTP Associate with Spencer Ltd and is applying modern deep learning techniques to text analysis
-and document classification to optimise Spencer's workflows and productivity.
-Bikash holds a PhD from the Université de Lorraine in France (2015). 
-</p>
-</details>
-</abstract>
-</ul>	
-<br>
-
-<h6>Dr Robert Houseago</h6>, Research Associate, 
-&nbsp;&nbsp;
-<a href="mailto:R.C.Houseago-2016@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://www.researchgate.net/profile/Robert-Houseago"><i class="fa fa-home" ></i></a>
-<br>Environmental modelling, coastal geomorphology, data analytics
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-<p><img class="img-responsive" src="./img/bobby.jpg" alt="" width="180" align="right">	
-Bobby is a coastal geomorphologist interested in the physical processes influencing coastal dynamics and delta morphodynamics. 
-Research projects incorporate: coastal vegetation, sediment fluxes, and hydrodynamics. His current primary research project 
-investigates the role of seagrass on hydrodynamics and wave attenuation via experimental flume research, 
-validated by field measurements as part of international collaboration within the Hydralab+ protect. A range of 
-interdisciplinary data collection techniques are applied to the research in order to quantify complex interactions 
-and non-linear processes associated with vegetation, wave dynamics and sedimentation. </p>
-<p>Bobby is a member of the Energy and Environment Institute and a postdoctoral researcher on our EPSRC Supergen ORE grant, working 
-on hybrid methods for fatigue forecasting in wind turbine monopiles, bridging physical and machine learning methods. </p>
-</details>
-</abstract>
-</ul>	
-<br>
-
 <h6>Dr Yifei Wang</h6>, Research Associate
 &nbsp;&nbsp;
 <a href="mailto:Yifei.Wang@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
@@ -628,34 +573,6 @@ overarching goal of the project is to be able to understand and predict the impa
 ecosystems and wildlife. 
 </p>
  
-</details>
-</abstract>
-</ul>	
-<br>
-
-<h6>Luana Mincarelli</h6>, PhD student 
-&nbsp;&nbsp;
-<a href="mailto:L.F.Mincarelli-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://www.chemecolhull.com/luana-fiorella-mincarelli/"><i class="fa fa-home"></i></a>
-<a href="https://scholar.google.it/citations?user=TU1dLFsAAAAJ&hl=it"><i class="fa fa-google"></i></a>
-<a href="https://www.linkedin.com/in/luanamincarelli/?originalSubdomain=it"><i class="fa fa-linkedin-square" ></i></a>
-<br> Marine biology
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-<p><img class="img-responsive" src="./img/luana.jpg" alt="" width="180" align="right">	
-The aim of my PhD project is to investigate how different combined stressors act in the environment, with particular attention to biological responses in mussels.
-</p>
-<p>
-I obtained an MSc in Marine Biology at Marche Polytechnic University (Ancona, Italy), working on a project concerning the modulatory effect of climate change (global warming and ocean acidification) and heavy metals exposure on biological responses of the Mediterranean mussel Mytilus galloprovincialis.
-</p>
-<p>
-The first part of my PhD involves the exposure of the blue mussel Mytilus edulis to several stress compounds. At the moment, I’m studying how different temperatures and phthalate exposure can affect biological responses of blue mussels. Finally, the second part of my project will involve data analysis: at the end of my PhD, I would like to have collected enough data to use artificial intelligence and machine learning for simulating future climate conditions and consequence for mussel populations.</p>
 </details>
 </abstract>
 </ul>	
@@ -743,29 +660,6 @@ Victoria is researching a computational semiotics framework for the analysis and
 <br>
 
 
-<h6>Eva Sousa</h6>, PhD student 
-&nbsp;&nbsp;
-<a href="mailto:e.sousa-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a>
-<br> Artificial intelligence, medical imaging
-<br>
-<ul class="blog-meta">
-<abstract style="display:inline" ;>
-<details close style="display:inline;">
-<summary>
-
-<span style="color:#6195FF">Full profile</span>
-</summary>
-<p><img class="img-responsive" src="./img/eva.jpg" alt="" width="180" align="right">	
-I Licentiated in Nuclear Medicine in 2006 from Escola Superior de Tecnologia da Saúde de Lisboa – Instituto Politécnico de Lisboa (ESTeSL-IPL). Following, I finnished my MSc in Biophysics and Medical Physics in 2009, from Instituto de Biofísica e Engenharia Biomédica, da Faculdade de Ciências da Universidade de Lisboa (IBEB-FCUL. Concluded one Biomedical Engineering Specialization in 2014 from Faculdade de Ciências e Tecnologias da Universidade de Coimbra (FCTUC). I am presently student PhD Student in University of Hull.</p>
-<p>From September of 2008 to September of 2018, I was full-time Assistant Lecturer in ESTeSL-IPL. Lecturing in the degrees of Nuclear Medicine and Medical Imaging and RadiotherapyDuring this time, I collected some experience of lecturing in different Institutions abroad under Erasmus Program in 2010 (Karolinska Institutet – Sweden); 2012 and 2013 in NuPHiCos (Medical University of Plovdiv – Bulgaria); 2015 (Institute Paul Lambin – Brussels). And From 2012 to 2018 I coordinate the entrepreneurship Program of ESTeSL-IPL.</p>
-<p>I collaborated with some research teams and projects and have being member of Member of the Research Groups GI-MOSM and  GIRES. I have collaborated in some funded research projects by Instituto Politécnico de Lisboa, with the fellowship (IDI&CA) do IPL – 2016. </p>
-<p>As hobbies I am also a writer, blogger and volunteer.</p>
-</details>
-</abstract>
-</ul>	
-<br>
-
 
 </div></div></div>
 	<!-- Alumni -->
@@ -785,7 +679,21 @@ I Licentiated in Nuclear Medicine in 2006 from Escola Superior de Tecnologia da 
 				<!-- /Section header -->
 				
 
-<h6>Dr Alex Turner</h6>, Affiliate, now Assistant Professor at Nottingham University &nbsp;&nbsp;
+<h6>Dr Bikash Gwawali</h6>, KTP Associate, now Data Scientist at Spencer Ltd. &nbsp;&nbsp;
+<a href="https://scholar.google.com/citations?user=k78ZknsAAAAJ&hl=en"><i class="fa fa-google"></i></a>
+<a href="https://www.linkedin.com/in/bikash-gyawali-1b26476a/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Artificial intelligence, data analysis, natural language processing
+<br>
+<br>
+
+<h6>Dr Robert Houseago</h6>, Research Associate, now Research Associate at Durham University. &nbsp;&nbsp;
+<a href="https://scholar.google.co.uk/citations?user=nSFstQcAAAAJ&hl=en"><i class="fa fa-google"></i></a>
+<a href="https://www.researchgate.net/profile/Robert-Houseago"><i class="fa fa-home" ></i></a>
+<br> Environmental modelling, coastal geomorphology, data analytics
+<br>
+<br>
+
+<h6>Dr Alex Turner</h6>, Lecturer, now Assistant Professor at Nottingham University &nbsp;&nbsp;
 <a href="mailto:Alexander.Turner@nottingham.ac.uk"><i class="fa fa-envelope"></i></a> 
 <a href="https://www.nottingham.ac.uk/computerscience/people/alexander.turner"><i class="fa fa-home"></i></a>
 <a href="https://scholar.google.co.uk/citations?user=XJ8sNiIAAAAJ&hl=en"><i class="fa fa-google"></i></a>
@@ -828,6 +736,23 @@ Artificial intelligence, machine learning, data analytics, robotics
 <br> Deep learning, genetic algorithms, complex dynamical systems
 <br>
 <br>
+
+<h6>Eva Sousa</h6>, PhD student
+&nbsp;&nbsp;
+<a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a>
+<br> Artificial intelligence, medical imaging
+<br>
+<br>
+
+<h6>Luana Mincarelli</h6>, PhD student
+&nbsp;&nbsp;
+<a href="https://www.chemecolhull.com/luana-fiorella-mincarelli/"><i class="fa fa-home"></i></a>
+<a href="https://scholar.google.it/citations?user=TU1dLFsAAAAJ&hl=it"><i class="fa fa-google"></i></a>
+<a href="https://www.linkedin.com/in/luanamincarelli/?originalSubdomain=it"><i class="fa fa-linkedin-square" ></i></a>
+<br> Marine biology
+<br>
+<br>
+
 
 <h6>Dr Ric Colasanti</h6>, Postdoctoral Researcher, now at Bournemouth University<br>
 Artificial intelligence, machine learning
